followed NextAuth.js documentation wrote nextauth.js file

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://capstoneprojectadac15:capstoneprojectadac15@cluster0.vghpo9u.mongodb.net/test"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
