--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
+    "qs": "^6.11.2",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
