--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "leaflet": "^1.9.4",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
     "qs": "^6.11.2",
@@ -28,6 +29,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
     "typescript": "5.1.6",
     "world-countries": "^4.0.0",
@@ -35,6 +37,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
     "prisma": "^5.0.0",
